# ai-autocad-chatbot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  constraints.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/ai/: __init__.py  providers.py
app/cad/: __init__.py  cli.py  models.py  writer.py
app/cli/: __init__.py  executor.py
app/core/: __init__.py  config.py  conversion.py  dxf_writer.py  nlp_rules.py  units.py
app/dsl/: __init__.py  clarify.py  commands.py  compiler.py  errors.py  llm_parser.py  llm_provider.py  parse_rule.py  rules.py
app/memory/: __init__.py  session.py  store.py
docs/: clarification.md  errors.md  prompt_contract.json
examples/: sample_commands.txt
tests/: test_clarify.py  test_cli_executor.py  test_dxf_writer.py  test_llm_parser.py  test_parser.py  test_rule_parser.py  test_sanity.py  test_units.py
