[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-autocad-chatbot"
version = "0.1.0"
description = "Conversational assistant that produces CAD artifacts from text and sketches."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "AI AutoCAD Chatbot Team" }
]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
known_first_party = ["app", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-include = ["*.pyi"]
lint.select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
lint.ignore = ["E203", "E501"]
lint.isort = { known-first-party = ["app", "tests"] }

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
namespace_packages = true
mypy_path = "app"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

